Bug 1904168 - Make sure fallback connection work,  a=dmeehan

Original Revision: https://phabricator.services.mozilla.com/D215016

Differential Revision: https://phabricator.services.mozilla.com/D215064